--- a/Marina-practica2css.html
+++ b/Marina-practica2css.html
@@ -4,24 +4,40 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="Marina-practica2css.css">
 	</head>
 <body>
-	<table style="width:50%; background-color:#fff; border:15px solid #f2f2f2">
+	<table class="table1">
 		<tr>
-			<td style="width:20%;background-color:#81Daf5;"><img style="height:150px; border-radius: "src="https://scontent-mad1-1.xx.fbcdn.net/v/t1.0-9/23518881_10159616005120252_2691482559474989284_n.jpg?oh=147539f798203d29f946509013b5fb2f&oe=5B1F01FD"> Marina</a>
-				<ul style ="font-size:18px;">
-					<a href=""></i></a>
-					<i class="fa fa-joombla"></i>
-					<i class="fa fa-laptop"></i>
-					<i class="fa fa-lastfm"></i>
-					<i class="fa fa-bars"></i>
-				</ul>
+			<td class="custom1" ><img src="https://scontent-mad1-1.xx.fbcdn.net/v/t1.0-9/23518881_10159616005120252_2691482559474989284_n.jpg?oh=147539f798203d29f946509013b5fb2f&oe=5B1F01FD"></a>
+		                    <ul>
+                                    <li>
+                                        <a href="https://www.facebook.com">
+                                            <i class="fa fa-facebook iconcolor"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://twitter.com">
+                                            <i class="fa fa-twitter iconcolor"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://www.instagram.com">
+                                            <i class="fa fa-instagram iconcolor"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="mr-2" href="https://github.com">
+                                            <i class="fa fa-github iconcolor" aria-hidden="true"></i>
+                                        </a>
+                                    </li>
+                                </ul>
 			</td>
 
-			<td style="width:30%"> 
+			<td class="custom2"> 
 			<table>
 				<tr>
-				<p> Soy un parrafo </p>
+				<p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. </p>
 				</tr>
 
 				<tr>
