--- a/Marina-formularios.html
+++ b/Marina-formularios.html
@@ -42,8 +42,8 @@
 		  <input type="text"  name="q" placeholder="escribe aquí ">
 		  <select name="cars">
 			  <option value="Esp">Español</option>
-			  <option value="Ing">Inglé</option>
-			  <option value="Francés">Francé</option>
+			  <option value="Ing">Inglés</option>
+			  <option value="Francés">Francés</option>
 			  <option value="Chino">Chino</option>
           </select>
 		   <br>
