--- a/Marina-formularios.html
+++ b/Marina-formularios.html
@@ -26,21 +26,12 @@
 		  <input type="submit" value="Submit">
 	  </form>
 	  <!-- Fin Búsqueda por Twitter-->
-	  <!-- Búsqueda por Google Maps / Checkbox-->
-	  <form action="https://www.google.es/maps" target ="_blank">
-			<h2>Búsqueda en Google Maps</h2> <br>
-		  <input type="text"  name="q" placeholder="escribe aquí ">
-		  <input type="checkbox" name="lang" value="Esp"> Español
-		  <input type="checkbox" name="lang" value="Ing"> Inglés
-		   <br>
-		  <input type="submit" value="Submit">
-	 </form>
-	   <!-- Fin Búsqueda por Google Maps / Checkbox-->
+	  
 	    <!-- Búsqueda por Google Maps / DropDown-->
 	  <form action="https://www.google.es/maps" target ="_blank">
 			<h2>Búsqueda en Google Maps</h2> <br>
 		  <input type="text"  name="q" placeholder="escribe aquí ">
-		  <select name="cars">
+		  <select name="lang">
 			  <option value="Esp">Español</option>
 			  <option value="Ing">Inglés</option>
 			  <option value="Francés">Francés</option>
