--- a/fibonacci.html
+++ b/fibonacci.html
@@ -7,7 +7,7 @@
 Array de números con dos elementos: 0 y 1. (serie) 
 Añadir un elemento cuyo valor sea la suma de los dos anteriores. 
 Ciclo de push's(x) a al array serie 15 veces con la variable 
-x = es la suma del elemento cuya posición en el array coincide con el indice del ciclo for que se está ejecutando -->
+x = la suma del elemento cuya posición en el array coincide con el indice del ciclo for que se está ejecutando y el elemento siguiente -->
 <script>
 var serie = [0,1];
 var x;
