--- a/fibonacci.html
+++ b/fibonacci.html
@@ -9,7 +9,7 @@ var x;
 	for (i = 0; i < 16; i++){
 		x = serie[i] + serie[i + 1]
 		serie.push(x);
-		console.log('iteracion ' + i + ': ' + serie)
+		console.log(serie)
 			}
 document.getElementById("r1").innerHTML = '15 elementos de la serie de Fibonacci: ' + serie;
 </script>
