--- a/fibonacci.html
+++ b/fibonacci.html
@@ -4,7 +4,7 @@
 <title>Serie de Fibonacci (bucle)</title>
 <p id="r1"></p>
 <script>
-var serie = [0,1];
+var serie = [];
 	for (i = 0; i < 16; i++){
 		x = serie[i] + serie[i + 1]
 		serie.push(x);
