--- a/fibonacci.html
+++ b/fibonacci.html
@@ -4,11 +4,11 @@
 <title>Serie de Fibonacci (bucle)</title>
 <p id="r1"></p>
 <script>
-var serie = [];
+var serie = [0, 1];
 	for (i = 0; i < 16; i++){
 		x = serie[i] + serie[i + 1]
 		serie.push(x);
-		console.log(serie)
+		console.log('iteracion ' + i + ': ' + serie)
 			}
 document.getElementById("r1").innerHTML = '15 elementos de la serie de Fibonacci: ' + serie;
 </script>
