--- a/David_fibonacci_for.html
+++ b/David_fibonacci_for.html
@@ -5,7 +5,7 @@
 	<script>
 		var a= 0
 		var b= 1
-		var suma=b
+		var suma=a
 			for(i=0; i < 15; i++){
 			document.write(suma + ",");
 			suma=a+b;
