--- a/fibonacci.html
+++ b/fibonacci.html
@@ -6,9 +6,9 @@
 <script>
 var serie = [0, 1];
 	for (i = 0; i < 15; i++){
-		x = serie[i] + serie[i + 1]
+		x = serie[i] + serie[i + 1];
 		serie.push(x);
-		console.log(i + ': ' + serie)
+		console.log(i + ': ' + serie);
 			}
 document.getElementById("r1").innerHTML = serie;
 </script>
