--- a/Marina-Fibonacci.html
+++ b/Marina-Fibonacci.html
@@ -1,12 +1,12 @@
 
 <html>
 <head>
-<title> Serie de Fibonacci </title>
+<title> Practica Logica </title>
 </head>
 <body>
 
 <!--Opción 1 Utilizando For, 15 operaciónes ( error en el inicio (no muestra el primer 1))-->
-        <script type="text/javascript">
+        <script >
             var a=0; 
             var b=1; 
             var c; 
@@ -16,8 +16,10 @@
                 c=a+b; 
                 a=b; 
                 b=c; 
-            document.write(c);
+            document.write(c+ " ");
             }
         </script> 
+
+
 </body> 
 </html>
