--- a/david_pruebaTexto.html
+++ b/david_pruebaTexto.html
@@ -37,6 +37,14 @@
                 console.log(cadenaResto)
                 console.log("Primer array de consonantes: " + array1);
                 console.log("Primer array de consonantes: " + array2);
+                
+                    if (cadenaResto.length < cadenaVocales.length){
+                     document.write( "Más vocales que consonantes")
+                }
+                 else {
+                    document.write( "Más consonantes que vocales")
+                 }
+
 
 
             </script>
