--- a/Alejandro-texto.html
+++ b/Alejandro-texto.html
@@ -1,6 +1,6 @@
 <!-- Cosas que no he podido hacer
 		1. Ordenar el array de vocales 
-		2. Separar el array mitad2 con "!" en caso de que linea 43 = false-->
+		2. Separar el array mitad2 con "!" -->
 
 <!DOCTYPE html>
 <html>
