Ejercicio 1 Fin de Semana
En este ejercico falta vincular las partes y terminar el paso de la comprobación de dígitos.

--- a/Marina-texto.html
+++ b/Marina-texto.html
@@ -31,7 +31,7 @@
 					vocales.push(str.charAt(i));
 				}
 		// Envío las consonantes totales al arreglo consonantes//
-				else{
+				else {
 					consonantes.push(str.charAt(i));}
 				 }
 				 }
@@ -41,9 +41,14 @@
 			 var consonantes2 = consonantes.slice(consonantes.length/2,consonantes.length);
           // Pregunto cual de los dos arreglos entre: conosonates1 y vocales es mayor para imprimirlo en panatalla//
 			    if (consonantes1.length < vocales.length){
-			    	 document.write( "Hay más vocales que consonates")
+			    	 document.write( "Hello World")
 			    }
 			     else {
+			     	var consonante3 = [];{
+			     		for (i=0; i=consonante2.length; i++){
+			     			
+			     		}
+			     	}
 			     	document.write( consonantes1 +"!")
 			     }
 
