--- a/Marina-texto.html
+++ b/Marina-texto.html
@@ -10,7 +10,7 @@
 <script>
 
 	// Crear las variables donde se van a almacenar los contenidos//
-	 var texto ="Hello World"
+	 var texto ="jakjdbkajc;wkbdjvwiuebviw[uvbwijvb;sidjbv;skdjbv;skbjv;skdjvbs;kbjv;skdjbv;skbdjv;sdjv"
 	 var vocales = [];
 	 var consonantes = [];
 	 var consonantes1 = [];
@@ -41,7 +41,7 @@
 			 var consonantes2 = consonantes.slice(consonantes.length/2,consonantes.length);
           // Pregunto cual de los dos arreglos entre: conosonates1 y vocales es mayor para imprimirlo en panatalla//
 			    if (consonantes1.length < vocales.length){
-			    	 document.write( "Hello World")
+			    	 document.write( "jakjdbkajc;wkbdjvwiuebviw[uvbwijvb;sidjbv;skdjbv;skbjv;skdjvbs;kbjv;skdjbv;skbdjv;sdjv")
 			    }
 			     else {
 			     	var consonante3 = [];{
