--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Pagina madre</title>
+     <link rel="stylesheet" href="style/main.css">
     <script src="js/main.js"></script>
     <script src="templates/section1Code.js"></script>
+    <script src="templates/section2Code.js"></script>
   </head>
   <body onload="mainPageLoader()">
     <section id="section1"> </section>
