Inicio de la practica

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Pagina madre</title>
-     <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/main.css">
     <script src="js/main.js"></script>
-    <script src="templates/section1Code.js"></script>
-    <script src="templates/section2Code.js"></script>
+    <script src="js/infoTransferenceController.js"></script>
+    <script src="templates/hugePicManager.js"></script>
+    <script src="templates/tinyPicManager.js"></script>
+    <script type="text/javascript" src="js/datas.json"></script>
   </head>
   <body onload="mainPageLoader()">
-    <section id="section1"> </section>
-    <section id="section2"> </section>
+    <section id="section1" class="section1MainClass"></section>
+    <section id="section2" class="section2MainClass"></section>
   </body>
 </html>
