--- a/indexpruevasEj.html
+++ b/indexpruevasEj.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style/main.css">
     <script src="js/main.js"></script>
     <script src="templates/hugePicManager.js"></script>
-    <script type="text/javascript" src="js/datas.json"></script>
+    <script src="js/dataManager/nodeDataObject.js"></script>
   </head>
   <body onload="prueba()">
     <section id="section2" class="section2MainClass"></section>
