· Revisión de la parte de Alejandro.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Pagina madre</title>
     <link rel="stylesheet" href="style/main.css">
     <script src="js/main.js"></script>
+    <script src="js/tinyPicLogic.js"></script>
     <script src="js/infoTransferenceController.js"></script>
+    <script src="js/dataManager/nodeDataObject.js"></script>
     <script src="templates/hugePicManager.js"></script>
     <script src="templates/tinyPicManager.js"></script>
     <script type="text/javascript" src="js/datas.json"></script>
